--- a/Quiz/app/src/main/res/layout/activity_main.xml
+++ b/Quiz/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/noBtn"
+        android:id="@+id/noButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nbtn"
+        android:text="@string/answerNo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,15 +28,15 @@
         app:layout_constraintTop_toBottomOf="@+id/questionTextView" />
 
     <Button
-        android:id="@+id/yesBtn"
+        android:id="@+id/yesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ybtn"
+        android:text="@string/answerYes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/questionTextView"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/questionTextView"
         />
-
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
